# serena-claude-plugin

./: .gitignore  README.md  plugin.json  pyproject.toml
.claude-plugin/: plugin.json
agents/: framework-explore.md  serena-explore.md
commands/: load.md  onboard.md  save.md
docs/plans/: 2025-12-08-serena-memory-folder-support.md  2025-12-09-serena-auto-activation.md  2025-12-18-serena-plugin-rework.md
hooks/: explore-php-yaml.py  hooks.json
serena/: __init__.py  connector.py  deps.py  plugin.py  response.py
serena/cli/: __init__.py  __main__.py  cli.py  client.py  formatters.py  main.py  session.py
serena/routes/: __init__.py  edit.py  find.py  help.py  memory.py  onboarding.py  search.py  status.py
skills/serena/: CHANGELOG.md  SKILL.md  manifest.json
skills/serena/references/: backends.md  cli-reference.md  editing-patterns.md  memory.md  recipes.md  session-handoff.md  symbol-kinds.md  symfony-oro.md
skills/serena/scripts/: README.md  __init__.py
tests/: conftest.py  test_cli.py  test_plugin.py
